--- a/style.css
+++ b/style.css
@@ -1,27 +1,27 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Roboto, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
 }
 
 .nav-bar {
-    background-color: #1F2937;
-    display: flex;
-    justify-content: space-between;
-    color: #F9FAF8;
-    padding: 20px 100px;
-    font-size: 24px;
+  background-color: #1f2937;
+  display: flex;
+  justify-content: space-between;
+  color: #f9faf8;
+  padding: 20px 100px;
+  font-size: 24px;
 }
 
 .nav-bar ul {
-    display: flex;
-    gap: 30px;
-    list-style-type: none;
+  display: flex;
+  gap: 30px;
+  list-style-type: none;
 }
 
 .nav-bar a {
-    text-decoration: none;
-    color: #F9FAF8;
-    font-size: 18px;
+  text-decoration: none;
+  color: #f9faf8;
+  font-size: 18px;
 }
