--- a/style.css
+++ b/style.css
@@ -61,3 +61,37 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+.info-section {
+  width: 100%;
+  height: 484px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.info-section h1 {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+}
+
+.flex-container {
+  display: flex;
+  gap: 4rem;
+  margin-bottom: 100px;
+}
+
+.info {
+  height: auto;
+  width: 150px;
+}
+
+.img-container {
+  border: 3px solid #3882f6;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  height: 150px;
+  width: 150px;
+}
