--- a/style.css
+++ b/style.css
@@ -95,3 +95,34 @@
   height: 150px;
   width: 150px;
 }
+
+.testimony-section {
+  width: 100%;
+  height: 484px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e5e7eb;
+}
+
+.testimony {
+  height: auto;
+  width: 50%;
+}
+
+.quote,
+.author {
+  color: #1f2937;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: lighter;
+}
+
+.author {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: right;
+}
