--- a/style.css
+++ b/style.css
@@ -126,3 +126,41 @@
   font-weight: bold;
   text-align: right;
 }
+
+.action-section {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.action-container {
+  border-radius: 10px;
+  background-color: #3882f6;
+  color: #f9faf8;
+  height: 120px;
+  width: 1000px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.action-container h3 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.action-container p {
+  font-weight: 100;
+}
+
+.action-container button {
+  padding: 10px 40px;
+  background-color: #3882f6;
+  color: #f9faf8;
+  border: 2px solid #f9faf8;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
