--- a/style.css
+++ b/style.css
@@ -96,6 +96,27 @@
   width: 150px;
 }
 
+.coffee-1 {
+  background-image: url(./images/coffee2.jpg);
+  background-color: #f9faf8;
+  background-position: center;
+  background-size: cover;
+}
+
+.coffee-2 {
+  background-image: url(./images/coffee3.jpg);
+  background-color: #f9faf8;
+  background-position: center;
+  background-size: cover;
+}
+
+.coffee-3 {
+  background-image: url(./images/coffee4.jpg);
+  background-color: #f9faf8;
+  background-position: center;
+  background-size: cover;
+}
+
 .testimony-section {
   width: 100%;
   height: 484px;
