--- a/style.css
+++ b/style.css
@@ -142,6 +142,17 @@
   font-weight: lighter;
 }
 
+.author-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+}
+
+.author-container img {
+  border-radius: 50%;
+}
+
 .author {
   font-size: 24px;
   font-weight: bold;
